<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50">

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/delete"
        android:textColor="#605BE6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_add"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/add"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrice"
        app:layout_constraintVertical_bias="0.095" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:foregroundGravity="bottom"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAK"
        android:autofillHints="price..."
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editAK"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAO"
        android:autofillHints="Адрес конечный..."
        tools:ignore="LabelFor"/>

    <EditText
        android:id="@+id/editType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirm"
        android:autofillHints="Тип..."
        tools:ignore="LabelFor"/>

    <EditText
        android:id="@+id/editAO"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editType"
        android:autofillHints="Адрес отправки..."
        tools:ignore="LabelFor"/>

    <EditText
        android:id="@+id/editFirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Фирма..."
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/TextFirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firm_res"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toStartOf="@+id/editFirm"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/TextType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toStartOf="@+id/editFirm"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextFirm"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/TextAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ao"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toStartOf="@+id/editFirm"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextType"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/TextAK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ak"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toStartOf="@+id/editFirm"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextAO"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/TextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_res"
        android:textColor="#673AB7"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toStartOf="@+id/editFirm"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextAK"
        app:layout_constraintVertical_bias="0.281" />

</android.support.constraint.ConstraintLayout>